# travel-agent

./: .env.example  .gitignore  AGENTS.md  README.md  agent_execution_history_findings.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 494ca223a01f_add_execution_event_data_column.py  9d6e3b7a1c42_allow_rebooking_cancelled_flights.py  a3f6d2c81e97_add_connector_setting_table.py  c2f4a8e9d103_link_execution_events_to_agent_runs.py  d8a61532fcf4_initial_schema.py  e47ab5e144df_drop_deadweight_columns.py
backend/app/: config.py  db.py  dbos_runtime.py  dependencies.py  main.py  models.py  rate_limit.py  schemas.py  state.py
backend/app/adapters/: __init__.py  activities_tavily.py  flights_searchapi.py  slack_hitl.py
backend/app/agent/: __init__.py  execution_log.py  observability.py  planner.py  prompts.py  tool_gate.py
backend/app/repositories/: booking_repository.py  trips_repository.py
backend/app/routes/: booking.py  connectors.py  slack.py  trips.py
backend/evals/: __init__.py  dataset.py  evaluators.py  run.py
backend/features/: booking_hitl.feature  trip_planning.feature
backend/scripts/: capture_flight_cassette.py
backend/specs/: openapi.yaml
backend/tests/: conftest.py  db_helpers.py  test_activity_provider_strategy.py  test_append_only.py  test_connectors_routes.py  test_dbos_runtime.py  test_eval_evaluators.py  test_eval_run.py  test_execution_log.py  test_execution_panel_route.py  test_flight_provider_strategy.py  test_observability.py  test_openapi_contract.py  test_planner_guardrails.py  test_planner_search_flights.py  test_prompt_injection_sanitizer.py  test_rate_limit.py  test_slack_hitl.py  test_slack_notification_wiring.py  test_tool_gate.py  test_trip_routes.py  test_validation_error_handler.py
backend/tests/steps/: test_booking_hitl.py  test_trip_planning.py
docs/: ARCHITECTURE.md  (+3 more)
(+23 files in other folders)
