[project]
name = "travel-agent"
version = "0.1.0"
description = "AI Travel Agent with a strict Human-in-the-Loop booking gate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic-ai-slim[google,openai]>=2.9",
    "dbos>=1.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-bdd>=8.1",
    "pydantic-evals>=2.9",
    "pyyaml>=6.0",
    "pyrefly>=0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyrefly]
project-includes = ["app", "evals", "tests"]

# SQLModel declares __tablename__ on its base in a way pyrefly reads as a descriptor, so every
# table model trips bad-override. It is a pure framework artifact, not a real override bug.
[tool.pyrefly.errors]
bad-override = false
